environments/production/ingress/users-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: users
  namespace: users-production
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/group.name: production
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /api/users
            pathType: Prefix
            backend:
              service:
                name: users
                port:
                  number: 80
